Basic Layout defined

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,3 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Just+Another+Hand&family=Kelly+Slab&family=Reenie+Beanie&family=VT323&display=swap');
 
 $vt323: 'VT323', monospace;
+$hand: 'Just Another Hand', cursive;
+$kelly: 'Kelly Slab', cursive;
+$reenie: 'Reenie Beanie', cursive;
