--- a/src/index.scss
+++ b/src/index.scss
@@ -1,27 +1,17 @@
 @import "./scss/base";
 @import "./scss/colors";
 @import "./scss/fonts";
+@import "./scss/components/cloth";
+@import "./scss/components/header";
+@import "./scss/components/notebook";
+
+html{
+	@media (max-width:450px) {
+		font-size: 13px;
+	}
+}
 body{
 	background-image: linear-gradient($table-color-a, $table-color-b);
 	background-repeat: no-repeat;
 	background-size: 100vw 100vh;
-}
-.table {
-	height: 100%;
-    .cloth{
-		position: absolute;
-		z-index: -100;
-		background-color: $table-color-b;
-		width: 60vw;
-		aspect-ratio: 1/1;
-		box-shadow: 2px 2px 10px rgba($color: #000000, $alpha: 0.25);
-		transform: translateX(-50%) translateY(-50%) rotateZ(45deg);
-		
-	}
-    header {
-        h1 {
-			font-family: $vt323;
-			color: $white-color;
-        }
-    }
 }
