--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,2 +1,6 @@
 @import 'modern-normalize/modern-normalize.css';
 @import "the-new-css-reset/css/reset.css";
+
+$main-shadow: 0px 4px 10px rgba(#000000, 0.25);
+$right-shadow: 10px 4px 10px rgba(#000000, 0.25);
+$left-shadow: -10px 4px 10px rgba(#000000, 0.25);
