FCC tests passed

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Just+Another+Hand&family=Kelly+Slab&family=Reenie+Beanie&family=VT323&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap');
 $vt323: 'VT323', monospace;
 $hand: 'Just Another Hand', cursive;
 $kelly: 'Kelly Slab', cursive;
 $reenie: 'Reenie Beanie', cursive;
+$hand-mono: 'Syne Mono', monospace;
