--- a/src/scss/components/_notebook.scss
+++ b/src/scss/components/_notebook.scss
@@ -1,14 +1,24 @@
 .Notebook {
     display: flex;
-    flex-wrap: wrap;
+    
     padding: 15px 30px;
     aspect-ratio: 16/9;
     max-height: 80vh;
     max-width: 90vw;
+	min-width: 300px;
     background-color: $notebook-color;
     margin: auto;
     border-radius: 20px;
     box-shadow: $main-shadow;
+	@media (max-width:800px) {
+		aspect-ratio: auto;
+		height: 100vh;
+	}
+	@media (max-width:628px) {
+		flex-direction: column;
+		gap: 5px;
+		padding: 10px;
+	}
 }
 .MDSheet {
     border-radius: 20px;
@@ -18,6 +28,10 @@
     padding: 20px;
     flex-basis: 50%;
     box-shadow: $left-shadow, -40px 0px 40px rgba($color: #000000, $alpha: 0.2) inset;
+	@media (max-width: 628px) {
+		box-shadow: $left-shadow, 0px -40px 40px rgba($color: #000000, $alpha: 0.2) inset;
+		padding: 10px;
+	}
 }
 .editor-header {
     display: flex;
@@ -64,6 +78,10 @@
     flex-basis: 50%;
     border-radius: 20px;
     box-shadow: $right-shadow, 40px 0px 40px rgba($color: #000000, $alpha: 0.2) inset;
+	@media (max-width:630px) {
+		height: 50%;
+		box-shadow: $right-shadow, 0px 40px 40px rgba($color: #000000, $alpha: 0.2) inset;
+	}
 }
 #preview {
     height: 100%;
@@ -71,6 +89,10 @@
     padding: 20px 30px;
     font-size: 1.4rem;
     overflow: auto;
+	@media (max-width:630px) {
+		
+		padding: 10px 25px;
+	}
     h1,
     h2,
     h3,
